--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,13 @@
   },
   "homepage": "https://github.com/MikDream/MikaelTrevidic_6_08122020#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.5",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2"
   }
 }
